--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-phone-number-input": "^3.4.10",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.0.2",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7"
